packages/theme-default/src/components/Tabs/index.module.scss
.container {
  background-color: var(--rp-code-block-bg);
  contain: content;
  border-radius: var(--rp-radius);
  margin: 1rem 0;

  :global(div[class*='language-']) {
    margin: 0 -0.5rem !important;
    border-radius: 0 !important;
    font-size: 13px !important;
  }

  :global(.rspress-code-title) {
    padding: 8px 16px !important;
  }
}

.tab-list {
  padding-left: 8px;
  padding-top: 4px;
  display: flex;
  min-width: 100%;
  overflow-x: scroll;
}

.tab {
  position: relative;
  color: var(--rp-c-text-2);
  border-bottom: 2px solid transparent;
  box-sizing: border-box;
  margin-right: 10px;
  padding: 6px 12px;
  margin-bottom: -1px;
  user-select: none;
  transition: all 0.2s ease-in-out;
  cursor: pointer;

  &:last-child {
    margin-right: 0;
  }

  &:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 25%;
    width: 50%;
    height: 2px;
    border-radius: 2px;
    background-color: transparent;
  }
}

.not-selected:hover {
  color: var(--rp-c-text-1);
}

.selected {
  color: var(--rp-c-link);
  font-weight: 500;

  &:after {
    background-color: currentColor;
  }
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

